refactor: Move project to root directory
- Restructure repository to have crates at root level
- Update .gitignore to exclude demo folders
- Fix GitHub workflows path
- Add ROADMAP.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Rust
 /target/
-Cargo.lock
 
 # Node.js
 node_modules/
@@ -30,3 +29,7 @@ Thumbs.db
 
 # Generated files
 generated_page.html
+
+# Demo folders (not part of the framework)
+/demo-site/
+/demo-react/
