feat(ai): Add Google Gemini provider
- Implement GeminiProvider using Google generative-language API
- Support Gemini 1.5 Pro and Flash models
- Add documentation and environment variable examples

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 # Get your keys from the respective provider dashboards
 OPENAI_API_KEY=sk-...
 ANTHROPIC_API_KEY=sk-ant-...
+GOOGLE_API_KEY=AIza-...
 
 # Model Configuration (Optional)
 # Defaults: gpt-5.2 (OpenAI), claude-opus-4-5 (Anthropic)
