feat(ai): Add xAI Grok provider support
- Add grok() convenience function using OpenAI-compatible API
- Support XAI_API_KEY configuration
- Update documentation and examples to include Grok

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 OPENAI_API_KEY=sk-...
 ANTHROPIC_API_KEY=sk-ant-...
 GOOGLE_API_KEY=AIza-...
+XAI_API_KEY=xai-...
 
 # Model Configuration (Optional)
 # Defaults: gpt-5.2 (OpenAI), claude-opus-4-5 (Anthropic)
