feat(cli): Add Aether CLI tool
- Implement 'generate' command with multi-provider support
- Support template slot overrides via --set
- Integrate with OpenAI, Anthropic, Gemini, Grok, and Ollama
- Add logging and error handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "crates/aether-ai",
     "crates/aether-macros",
     "crates/aether-node",
+    "crates/aether-cli",
 ]
 
 [workspace.package]
