--- a/crates/aether-ai/Cargo.toml
+++ b/crates/aether-ai/Cargo.toml
@@ -13,8 +13,11 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 async-trait = { workspace = true }
-reqwest = { workspace = true }
+reqwest = { workspace = true, features = ["json", "stream"] }
 tracing = { workspace = true }
+futures = "0.3"
+async-stream = "0.3"
+tokio-stream = "0.1"
 
 [dev-dependencies]
 tokio-test = "0.4"
