--- a/crates/aether-cli/Cargo.toml
+++ b/crates/aether-cli/Cargo.toml
@@ -22,6 +22,8 @@ env_logger = "0.10"
 log = "0.4"
 serde = { workspace = true }
 serde_json = { workspace = true }
+futures = "0.3"
+tokio-stream = "0.1"
 
 # Error handling
 anyhow = "1.0"
