--- a/crates/aether-core/Cargo.toml
+++ b/crates/aether-core/Cargo.toml
@@ -15,6 +15,9 @@ async-trait = { workspace = true }
 handlebars = { workspace = true }
 regex = { workspace = true }
 tracing = { workspace = true }
+futures = "0.3"
+async-stream = "0.3"
+tokio-stream = "0.1"
 
 [dev-dependencies]
 tokio-test = "0.4"
