feat(optimization): Implement Semantic Caching and TOON protocol support
- Add SemanticCache using fastembed for local vector similarity
- Implement TOON serializer for token-efficient context injection
- Add --cache and --toon flags to Aether CLI

--- a/crates/aether-core/Cargo.toml
+++ b/crates/aether-core/Cargo.toml
@@ -18,6 +18,10 @@ tracing = { workspace = true }
 futures = "0.3"
 async-stream = "0.3"
 tokio-stream = "0.1"
+tempfile = "3.10"
+fastembed = "5"
+dashmap = "5.5"
+serde_yaml = "0.9"
 
 [dev-dependencies]
 tokio-test = "0.4"
