--- a/crates/aether-core/Cargo.toml
+++ b/crates/aether-core/Cargo.toml
@@ -22,6 +22,7 @@ tempfile = "3.17"
 fastembed = "5.8"
 dashmap = "5.5.3"
 serde_yaml = "0.9"
+reqwest = { version = "0.12", features = ["json"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
