--- a/crates/aether-core/Cargo.toml
+++ b/crates/aether-core/Cargo.toml
@@ -23,6 +23,7 @@ fastembed = "5.8"
 dashmap = "5.5.3"
 serde_yaml = "0.9"
 reqwest = { version = "0.12", features = ["json"] }
+rhai = "1.20"
 
 [dev-dependencies]
 tokio-test = "0.4"
