--- a/crates/aether-node/package.json
+++ b/crates/aether-node/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@sjkim1127/aether-codegen",
+    "name": "@freexxx9206/aether-codegen",
     "version": "0.1.2",
     "description": "AI-powered dynamic code injection framework - Generate code with AI using templates",
     "main": "index.js",
@@ -7,7 +7,8 @@
     "author": "Aether Team",
     "license": "MIT",
     "publishConfig": {
-        "registry": "https://npm.pkg.github.com"
+        "registry": "https://registry.npmjs.org/",
+        "access": "public"
     },
     "repository": {
         "type": "git",
