feat: add ghost_shellv2 public demo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
     "crates/aether-ai",
     "crates/aether-macros",
     "crates/aether-node",
-    "crates/aether-cli", "demo/vault", "crates/aether-python",
+    "crates/aether-cli",
 ]
 
 [workspace.package]
