chore: update dependencies to 2026-01 versions
- reqwest: 0.12  0.13.1
- regex: 1.11  1.12
- rhai: 1.20  1.23
- dashmap: 5.5.3  6.1.0
- tempfile: 3.17  3.24
- serde_yaml  serde_yaml_ng (deprecated replacement)
- @napi-rs/cli: 2.x  3.5.1
- Updated NAPI config to new format (binaryName/targets)
- Added executeScript to Python/Node.js bindings
- Added set_healing/set_cache/set_toon to Python bindings

--- a/crates/aether-core/Cargo.toml
+++ b/crates/aether-core/Cargo.toml
@@ -15,15 +15,15 @@ async-trait = { workspace = true }
 handlebars = { workspace = true }
 regex = { workspace = true }
 tracing = { workspace = true }
-futures = "0.3.31"
-async-stream = "0.3.6"
-tokio-stream = "0.1.17"
-tempfile = "3.17"
+futures = "0.3"
+async-stream = "0.3"
+tokio-stream = "0.1"
+tempfile = "3.24"
 fastembed = "5.8"
-dashmap = "5.5.3"
-serde_yaml = "0.9"
-reqwest = { version = "0.12", features = ["json"] }
-rhai = "1.20"
+dashmap = { workspace = true }
+serde_yaml_ng = "0.10"
+reqwest = { workspace = true }
+rhai = { workspace = true }
 
 [dev-dependencies]
 tokio-test = "0.4"
