--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "crates/aether-macros",
     "crates/aether-node",
     "crates/aether-cli",
+    "crates/aether-python",
 ]
 
 [workspace.package]
@@ -17,23 +18,24 @@ repository = "https://github.com/sjkim1127/Aether"
 description = "AI-powered dynamic code injection framework with Anti-Reversing Shield"
 
 [workspace.dependencies]
-# ... (existing)
-aether-core = { path = "crates/aether-core", version = "0.1.1" }
-aether-ai = { path = "crates/aether-ai", version = "0.1.1" }
-aether-macros = { path = "crates/aether-macros", version = "0.1.1" }
-# Core dependencies
+# Internal crates
+aether-core = { path = "crates/aether-core", version = "0.1.2" }
+aether-ai = { path = "crates/aether-ai", version = "0.1.2" }
+aether-macros = { path = "crates/aether-macros", version = "0.1.2" }
+
+# Core dependencies (Updated 2026-01)
 tokio = { version = "1.49", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-thiserror = "2.0.17"
+thiserror = "2.0"
 async-trait = "0.1"
 
 # HTTP client for AI APIs
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.13", features = ["json"] }
 
 # Template processing
 handlebars = "6.4"
-regex = "1.11"
+regex = "1.12"
 
 # Proc macros
 syn = { version = "2.0", features = ["full", "parsing"] }
@@ -44,4 +46,8 @@ proc-macro2 = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
+# Scripting
+rhai = "1.23"
 
+# Caching
+dashmap = "6.1"
