--- a/crates/aether-node/Cargo.toml
+++ b/crates/aether-node/Cargo.toml
@@ -16,6 +16,7 @@ napi-derive = "2"
 tokio = { version = "1.43", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rhai = "1.23"
 
 [build-dependencies]
 napi-build = "2"
