--- a/crates/aether-python/Cargo.toml
+++ b/crates/aether-python/Cargo.toml
@@ -15,3 +15,4 @@ pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37"] }
 aether-core = { path = "../aether-core", version = "0.1.2" }
 aether-ai = { path = "../aether-ai", version = "0.1.2" }
 tokio = { version = "1", features = ["full"] }
+rhai = "1.23"
