--- a/crates/aether-core/Cargo.toml
+++ b/crates/aether-core/Cargo.toml
@@ -24,10 +24,16 @@ dashmap = { workspace = true }
 serde_yaml_ng = "0.10"
 reqwest = { workspace = true }
 rhai = { workspace = true }
+uuid = { workspace = true }
+aes-gcm = { workspace = true }
+base64 = { workspace = true }
 
 [dev-dependencies]
 tokio-test = "0.4"
 criterion = { version = "0.5", features = ["async_tokio"] }
+dotenv = "0.15"
+aether-macros = { workspace = true }
+aether-ai = { workspace = true }
 
 [[bench]]
 name = "template_benchmark"
