--- a/crates/aether-macros/Cargo.toml
+++ b/crates/aether-macros/Cargo.toml
@@ -13,3 +13,5 @@ proc-macro = true
 syn = { workspace = true }
 quote = { workspace = true }
 proc-macro2 = { workspace = true }
+aes-gcm = { workspace = true }
+base64 = { workspace = true }
