--- a/crates/aether-node/Cargo.toml
+++ b/crates/aether-node/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "aether-node"
-version = "0.1.3"
-edition = "2021"
-license = "MIT"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 description = "Node.js bindings for Aether AI code injection framework"
 
 [lib]
