--- a/crates/aether-python/Cargo.toml
+++ b/crates/aether-python/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "aether-python"
-version = "0.1.3"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 description = "Python bindings for Aether AI code injection framework"
-license = "MIT"
+license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
@@ -12,7 +12,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37"] }
-aether-core = { path = "../aether-core", version = "0.1.3" }
-aether-ai = { path = "../aether-ai", version = "0.1.3" }
+aether-core = { workspace = true }
+aether-ai = { workspace = true }
 tokio = { version = "1", features = ["full"] }
 rhai = "1.23"
