--- a/crates/aether-node/Cargo.toml
+++ b/crates/aether-node/Cargo.toml
@@ -17,6 +17,7 @@ tokio = { version = "1.43", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rhai = "1.23"
+futures = "0.3"
 
 [build-dependencies]
 napi-build = "2"
