feat(ffi): add callback-based streaming API to C/C++ FFI

--- a/crates/aether-ffi/Cargo.toml
+++ b/crates/aether-ffi/Cargo.toml
@@ -17,6 +17,7 @@ aether-ai = { workspace = true }
 tokio = { workspace = true }
 once_cell = "1.19"
 libc = "0.2"
+futures = "0.3"
 
 [build-dependencies]
 cbindgen = "0.26"
