--- a/crates/aether-python/Cargo.toml
+++ b/crates/aether-python/Cargo.toml
@@ -17,3 +17,4 @@ aether-ai = { workspace = true }
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0"
 rhai = "1.23"
+futures = "0.3"
